[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.9"
exclude = "build"
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["ddtrace.*"]
check_untyped_defs = false
follow_imports = "skip"

[tool.pytest.ini_options]
timeout = 300

[tool.ruff]
exclude = ['.venv', '.git', '__pycache__', 'proto', 'build']
ignore = ['E501', 'E741']
select = ['E', 'F', 'W', 'I']
line-length = 120

[tool.ruff.per-file-ignores]

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["pytest"]