[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vespacli"
version = "8.294.50-alpha"
description = "A Python wrapper for Vespa CLI tools, supporting multiple platforms."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["vespa", "cli", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://example.com/vespacli"
documentation = "https://example.com/vespacli/docs"
repository = "https://github.com/yourusername/vespacli"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
vespacli = "vespacli:run_vespa_cli"