[metadata]
name = vespa_client
author = @thomasht86
author_email = thomas.h.thoresen@gmail.com
description = Python client library for Vespa
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Homepage = N/A
keywords = vespa, client, cloud, big data, infrastructure
classifiers =
    Topic :: System :: Distributed Computing
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests

[options.entry_points]
console_scripts =
    vespa_client = vespa_client.cli:main

[options.package_data]
vespa_client =
    requirements*.txt
    py.typed
    *.pyi
